[package]
name = "rusty_book_pirate"
version = "0.1.0"
authors = ["Alice <booksncode@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.6.0", features = ["full"] }
irc = "0.15.0"
futures = "0.3.13"
zip = "0.5.12"
crossterm = { version = "0.19", features = ["event-stream"] }
tui = { version = "0.15", default-features = false, features = ['crossterm'] }
regex = "1.5.4"
uuid = { version = "0.8.2", features = ["v4"]}